# Cpp-System-Monitor

./: CMakeLists.txt  README.md
src/: format.cpp  system.cpp
tests/: CMakeLists.txt  format_tests.cpp  system_tests.cpp
